--- a/train.ipynb
+++ b/train.ipynb
@@ -52,7 +52,7 @@
     "config = dict(\n",
     "    ppo=dict(clip=0.2, vf_loss_scale=1,\n",
     "             gamma=0.999, gae_lambda=0.95, normalize_gae=True,\n",
-    "             policy_reg_scale=0.3, lr=1e-4),\n",
+    "             policy_reg_scale=0.1, lr=1e-4),\n",
     "    ppo_step=dict(n_max_epoch=5, context_l=100, max_context=4,\n",
     "                  batch_size=80, target_kl=0.1),\n",
     "    policy_reg_scale_decay=0.999,\n",
@@ -66,13 +66,14 @@
     "        min_clip=21,\n",
     "        scale=0.005,\n",
     "    ),\n",
-    "    n_iter=1000,\n",
+    "    n_iter=350,\n",
+    "    save_period=100,\n",
     ")\n",
     "args = dict(\n",
-    "    gpu=0,\n",
-    "    n_worker=10,\n",
-    "    eval_period=20,\n",
-    "    n_eval_episode=10,\n",
+    "    gpu=4,\n",
+    "    n_worker=20,\n",
+    "    eval_period=50,\n",
+    "    n_eval_episode=20,\n",
     "    process_batch_size=100\n",
     ")"
    ]
@@ -134,7 +135,8 @@
     "for param in mineclip.parameters():\n",
     "    param.requires_grad = False\n",
     "mineclip.eval()\n",
-    "mineclip.to(args['gpu'])"
+    "mineclip.to(args['gpu'])\n",
+    "None"
    ]
   },
   {
@@ -232,7 +234,7 @@
     "    print(len(tr_task_embeds), end=' ')\n",
     "    \n",
     "    task_embed = mineclip.embed_text(prompt).cpu()\n",
-    "    task_embed = task_embed / task_embed.norm(p=2, dim=-1, keepdim=True)\n",
+    "    task_embed /= task_embed.norm(p=2, dim=-1, keepdim=True)\n",
     "    task_embed = task_embed[0]\n",
     "    \n",
     "    tr_task_embeds.append(task_embed)"
@@ -256,16 +258,9 @@
     "    \n",
     "    eval_env = make_eval_env(env_spec)\n",
     "    eval_env.unwrapped._bridge_env = None\n",
-    "    eval_envs.append(eval_env)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "oracle_task_prompts = [\n",
+    "    eval_envs.append(eval_env)\n",
+    "\n",
+    "eval_task_prompts = [\n",
     "    'get milk from a cow',\n",
     "    'shear a sheep and get some wool',\n",
     "    'hunt a chicken and get its meat',\n",
@@ -275,8 +270,8 @@
     "    'kill a spider',\n",
     "    'kill a zombie',\n",
     "]\n",
-    "oracle_task_prompts = mineclip.embed_text(oracle_task_prompts).cpu()[0]\n",
-    "oracle_task_prompts = oracle_task_prompts / oracle_task_prompts.norm(p=2, dim=-1, keepdim=True)"
+    "eval_task_embeds = mineclip.embed_text(eval_task_prompts).cpu()\n",
+    "eval_task_embeds /= eval_task_embeds.norm(p=2, dim=-1, keepdim=True)"
    ]
   },
   {
@@ -288,6 +283,7 @@
    },
    "outputs": [],
    "source": [
+    "# train\n",
     "for collect_i in range(config['n_iter']): \n",
     "    log = {'collect_i': collect_i, 'episode_i': collect_i*config['n_episode_in_batch']}\n",
     "\n",
@@ -312,7 +308,7 @@
     "                    for s in episode.states\n",
     "                ])\n",
     "            ).permute(0, 3, 1, 2).to(args['gpu'])\n",
-    "                \n",
+    "            \n",
     "            text_embed = tr_task_embeds[ep_idx]\n",
     "\n",
     "            video_embed = mineclip.embed_video(\n",
@@ -337,13 +333,14 @@
     "    log['tr_return'] = np.mean([sum(episode.rewards) for episode in episodes])\n",
     "    log['tr_epi_len'] = np.mean([len(episode.rewards) for episode in episodes])\n",
     "\n",
+    "\n",
     "    # eval env\n",
     "    if collect_i % args['eval_period'] == 0:\n",
     "        time1 = time.perf_counter()\n",
     "        \n",
     "        # collector\n",
     "        with torch.cuda.amp.autocast(), policy.expl():\n",
-    "            for task_idx, (eval_env, eval_task_embed) in enumerate(zip(eval_envs, oracle_task_prompts)):\n",
+    "            for task_idx, (eval_env, eval_task_embed) in enumerate(zip(eval_envs, eval_task_embeds)):\n",
     "                for _ in range(args['n_eval_episode']):\n",
     "                    conc_collector.submit(policy, copy.deepcopy(eval_env), None, eval_task_embed)\n",
     "            eval_episodes = conc_collector.wait()\n",
@@ -361,7 +358,7 @@
     "            for task_idx, success_rate in enumerate(taskw_success_rate) \n",
     "        }\n",
     "        log['eval_avg_success_rate'] = np.mean(taskw_success_rate)\n",
-    "\n",
+    "        \n",
     "    # logging\n",
     "    time1 = time.perf_counter()\n",
     "    stat = trainer.step(\n",
@@ -372,7 +369,13 @@
     "    log.update(stat)\n",
     "    \n",
     "    log['policy_reg_scale'] = trainer.policy_reg_scale\n",
-    "    trainer.policy_reg_scale *= config['policy_reg_scale_decay']"
+    "    trainer.policy_reg_scale *= config['policy_reg_scale_decay']\n",
+    "    \n",
+    "    # saving\n",
+    "    if collect_i % config['save_period'] == 0:\n",
+    "        torch.save({\n",
+    "            'policy_state_dict': policy.state_dict(),\n",
+    "        }, f'./asset/lift_trained_{collect_i}.pt')\n"
    ]
   }
  ],
