--- a/train.ipynb
+++ b/train.ipynb
@@ -66,13 +66,13 @@
     "        min_clip=21,\n",
     "        scale=0.005,\n",
     "    ),\n",
-    "    n_iter=350,\n",
+    "    n_iter=300,\n",
     "    save_period=100,\n",
     ")\n",
     "args = dict(\n",
-    "    gpu=4,\n",
-    "    n_worker=20,\n",
-    "    eval_period=50,\n",
+    "    gpu=0,\n",
+    "    n_worker=10,\n",
+    "    eval_period=25,\n",
     "    n_eval_episode=20,\n",
     "    process_batch_size=100\n",
     ")"
@@ -185,8 +185,6 @@
     "tr_task_envs = []\n",
     "for ii, eval_task_id in enumerate(eval_task_ids):\n",
     "    for world_seed in world_seeds:\n",
-    "        print(len(tr_task_envs), end=' ')\n",
-    "    \n",
     "        # building env\n",
     "        env_spec = eval_task_specs[eval_task_id]\n",
     "\n",
@@ -214,8 +212,8 @@
     "for ii, p in enumerate(polished):\n",
     "    if \":\" in p:\n",
     "        p = p.split(': ')[1]\n",
-    "    print(p)\n",
-    "    if ii % 5 == 4: print()\n",
+    "    # print(p)\n",
+    "    # if ii % 5 == 4: print()\n",
     "    \n",
     "    tr_task_prompts.append(p)"
    ]
@@ -231,7 +229,6 @@
    "source": [
     "tr_task_embeds = []\n",
     "for prompt in tr_task_prompts:\n",
-    "    print(len(tr_task_embeds), end=' ')\n",
     "    \n",
     "    task_embed = mineclip.embed_text(prompt).cpu()\n",
     "    task_embed /= task_embed.norm(p=2, dim=-1, keepdim=True)\n",
@@ -272,6 +269,27 @@
     "]\n",
     "eval_task_embeds = mineclip.embed_text(eval_task_prompts).cpu()\n",
     "eval_task_embeds /= eval_task_embeds.norm(p=2, dim=-1, keepdim=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import wandb\n",
+    "import logging\n",
+    "\n",
+    "wandb_run_name = 'LiFT'\n",
+    "wandb_project = 'LiFT'\n",
+    "\n",
+    "run_id = wandb.util.generate_id()\n",
+    "run_name = f'{wandb_run_name}.{run_id}'\n",
+    "logging.info(f\"wandb running with {run_name}\")\n",
+    "\n",
+    "wandb.init(project=wandb_project, config=config)\n",
+    "wandb.run.name = run_name\n",
+    "wandb.run.save()"
    ]
   },
   {
@@ -335,7 +353,7 @@
     "\n",
     "\n",
     "    # eval env\n",
-    "    if collect_i % args['eval_period'] == 0:\n",
+    "    if (collect_i + 1) % args['eval_period'] == 0:\n",
     "        time1 = time.perf_counter()\n",
     "        \n",
     "        # collector\n",
@@ -358,7 +376,7 @@
     "            for task_idx, success_rate in enumerate(taskw_success_rate) \n",
     "        }\n",
     "        log['eval_avg_success_rate'] = np.mean(taskw_success_rate)\n",
-    "        \n",
+    "    \n",
     "    # logging\n",
     "    time1 = time.perf_counter()\n",
     "    stat = trainer.step(\n",
@@ -371,11 +389,22 @@
     "    log['policy_reg_scale'] = trainer.policy_reg_scale\n",
     "    trainer.policy_reg_scale *= config['policy_reg_scale_decay']\n",
     "    \n",
+    "    wandb.log(log)\n",
+    "    \n",
     "    # saving\n",
-    "    if collect_i % config['save_period'] == 0:\n",
+    "    if (collect_i + 1) % config['save_period'] == 0:\n",
     "        torch.save({\n",
     "            'policy_state_dict': policy.state_dict(),\n",
-    "        }, f'./asset/lift_trained_{collect_i}.pt')\n"
+    "        }, f'./asset/lift_trained_{collect_i}.pt')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wandb.finish()"
    ]
   }
  ],
@@ -395,7 +424,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.17"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
